unpackaged/main/default/objects/SWOT_Action_1st_Quarter__c/SWOT_Action_1st_Quarter__c.object-meta.xml
<CustomObject>
    <label>SWOT Action 1st Quarter</label>
    <nameField>
        <displayFormat>SWA1-{00000}</displayFormat>
        <label>SWOT Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT Actions 1st Quarter</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>