unpackaged/main/default/objects/SWOT_Action_1st_Quarter__c/fields/Action_1st_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Action_1st_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action 1st Quarter</label>
    <referenceTo>Actions_1st_Quarter__c</referenceTo>
    <relationshipName>SWOT_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>