unpackaged/main/default/objects/SWOT_Action_1st_Quarter__c/fields/SWOT__c.field-meta.xml
<CustomField>
    <fullName>SWOT__c</fullName>
    <label>SWOT</label>
    <referenceTo>SWOT__c</referenceTo>
    <relationshipLabel>Actions 1st Quarter</relationshipLabel>
    <relationshipName>SWOT_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>