unpackaged/main/default/objects/SWOT_Action_1st_Quarter__c/fields/SWOT_Workstream_Type__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Workstream_Type__c</fullName>
    <formula>TEXT( SWOT__r.Workstream_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SWOT Workstream Type</label>
    <type>Text</type>
</CustomField>