unpackaged/main/default/objects/SWOT_Action_1st_Quarter__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <formula>TEXT(SWOT__r.Threats__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Threats</label>
    <type>Text</type>
</CustomField>